Don't notify the shelf when OOBE dialog is destroyed.

This stops the shelf from updating its button visibility only to be deleted anyway due to a successful sign-in.

Bug: 836172
Change-Id: I2a7f31610cd3317c87f06bce064cd0331a583d3c
Reviewed-on: https://chromium-review.googlesource.com/1166156
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581392}
Former-commit-id: fb4e7fd6427308b7a3f40259afc73d4f41ece144